<resources>
    <string name="app_name">Giro de Italia 2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="OpcionEscogida">Opcion escogida</string>
    <string name="Monumentos">Monumentos</string>
    <string name="Monumento">Monumento</string>
    <string name="PhotoDescription">PhotoDescription</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Lugar">Lugar:</string>
    <string name="Etapa">Etapa:</string>
    <string name="title_activity_nueva_patrimonio">NuevaPatrimonioActivity</string>
    <string name="title_historico">Histórico</string>
    <string name="title_cultural">Cultural</string>
    <string name="title_geografico">Geográfico</string>
    <string name="title_datos">Datos</string>
    <string name="title_patrimonio">Patrimonio</string>
    <string name="VerEnMapa">Ver en mapa</string>
    <string name="title_activity_etapa">EtapaActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Información de la etapa</string>
    <string name="Recorrido">Recorrido</string>
    <string name="Perfil">Perfil</string>
    <string name="FechaCalendario">11 de mayo</string>
    <string name="Evento">Etapa 1</string>
    <string name="AnioGiro">Año:</string>
    <string name="AnioGiroValor">2019</string>
    <string name="LogoGiro">Logo del giro</string>
    <string name="InicioGiro">Inicio:</string>
    <string name="InicioGiroValor">11 de mayo</string>
    <string name="FinGiro">Fin:</string>
    <string name="FinGiroValor">2 de junio</string>
    <string name="NumEtapasGiro">Nº de etapas:</string>
    <string name="NumEtapasGiroValor">21</string>
    <string name="EdicionGiro">Edición:</string>
    <string name="EdicionGiroValor">102</string>
    <string name="KmGiro">Km totales:</string>
    <string name="KmGiroValor">3.518,5</string>
    <string name="MascotaGiro">Mascota del giro</string>
    <string name="Bandera">Bandera</string>
    <string name="TipoEtapa">TipoEtapa</string>
    <string name="Salida">Salida:</string>
    <string name="Meta">Meta:</string>
    <string name="Kilometros">Kilómetros:</string>
    <string name="Tipo">Tipo:</string>
    <string name="Fecha">Fecha:</string>
    <string name="LugarElementoPat">Lugar:</string>
    <string name="DescripcionElementoPat">Descripción:</string>
    <string name="EtapaElementoPat">Etapa:</string>
</resources>
